Fix spacing of header elements at large breakpoints

--- a/app/assets/stylesheets/oregon_digital/_header.scss
+++ b/app/assets/stylesheets/oregon_digital/_header.scss
@@ -170,8 +170,7 @@ header {
 
   #top-navbar-collapse {
     letter-spacing: 2px;
-
-    @media (max-width: breakpoint-max(lg)) {
+    @media (max-width: breakpoint-max(md)) {
       justify-content: flex-start !important;
     }
 
